# agentic-rag

./: .gitignore  README.md  experiment_methodology.md  paper_analysis.md  presentation.html  presentation_script.md  progress_report.html  three_way_compare.html
repro/: README.md  pyproject.toml
repro/analysis/: decode_rag_ratio.py  plot_decode_rag_compare.py  plot_fig13.py  plot_fig14.py  plot_fig15.py  plot_fig16.py  plot_fig4.py  plot_fig5.py  plot_fig7.py  plot_fig8.py  plot_fig9.py  plot_hop_balance.py  plot_three_way_compare.py  recover_tool_calls.py  shared.py
repro/experiments/decode_rag_prefetch/: PLAN.md
repro/experiments/react_vectordb/: DECISIONS.md  PLAN.md  README.md  RESULTS.md
repro/measurement/: chat_wrapper.py  eval.py  metrics_collector.py  trace_schema.py
repro/patches/: agentbench.patch  config.patch  deterministic_select.patch  entry_points.patch
repro/results/: report.html
repro/results/aggregated/: tool_calls_recovered.json
repro/results/raw/: fig13_pareto.jsonl  react_vectordb.jsonl  react_vectordb_rerank.jsonl  react_vectordb_smoke.jsonl
repro/retrieval/: build_cohere_hotpot_index.py
repro/setup/: AGENTBENCH_COMMIT  LLAMACPP_COMMIT  download_model.sh  install_llamacpp.sh  start_server.sh  start_server_cache_on.sh
repro/sweep/: agent_runner.py  cells.py  cleanup_failed.sh  master_chain.sh  run_full.sh  run_vectordb_full.sh  sweep_runner.py  trim_chain.sh
repro/sweep/configs/: fig13_pareto.yaml  fig13_pareto_cache_on.yaml  fig14_iteration.yaml  fig15_fewshot.yaml  (+7 more)
repro/tests/: test_deterministic_select.py
(+14 files in other folders)
