[project]
name = "agentic-rag-repro"
version = "0.1.0"
description = "Local reproduction of HotpotQA experiments from arXiv 2506.04301v2"
requires-python = "==3.13.*"

dependencies = [
    "langchain==1.0.5",
    "langchain-core==1.0.4",
    "langchain-openai==1.0.2",
    "langgraph==1.0.3",
    "langgraph-prebuilt==1.0.2",
    "openai>=1.40.0",
    "pydantic>=2.7",
    "requests>=2.31",
    "tenacity>=8.0",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "numpy>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
]

[tool.setuptools]
# Reproduction project ships scripts, not an installable package — disable
# auto-discovery so editable install does not try to package repro/* subdirs.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
